syntax = "proto3";

package protoworlds;

// The external world service definition.
service Worlds {
  rpc RegisterClient (RegisterClientRequest) returns (RegisterClientResponse) {}
  rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}
  rpc Query (QueryRequest) returns (QueryResponse) {}
}

message RegisterClientRequest {
  string name = 1;
  bool is_blocking = 2;
  AuthPair auth_pair = 3;
  repeated Encoding encodings = 4;
  repeated Transport transports = 5;
}

message RegisterClientResponse {
  string client_id = 1;
  Encoding encoding = 2;
  Transport transport = 3;
  string redirect_to = 4;
}

// Expanded Trigger message and enum
message Trigger {
  oneof kind {
    StepEvent step_event = 1;
    EventTrigger event = 2;
    EventAnyTrigger event_any = 3;
    TimerTrigger timer = 4;
    EntityAccessTrigger entity_access = 5;
    EntityMutationTrigger entity_mutation = 6;
    DataMutationTrigger data_mutation = 7;
    DataMutationAnyTrigger data_mutation_any = 8;
    DataMutationAllTrigger data_mutation_all = 9;
  }
}

message StepEvent {}
message EventTrigger { string event_name = 1; }
message EventAnyTrigger { repeated string event_names = 1; }
message TimerTrigger { int64 duration_ms = 1; }
message EntityAccessTrigger { string entity_name = 1; }
message EntityMutationTrigger { string entity_name = 1; }
message DataMutationTrigger { string address = 1; }
message DataMutationAnyTrigger { repeated string addresses = 1; }
message DataMutationAllTrigger { repeated string addresses = 1; }

// Expanded Query message
message Query {
  Description description = 1;
  Layout layout = 2;
  repeated Filter filters = 3;
  repeated Map mappings = 4;
  Scope scope = 5;
}

enum Description {
  DESCRIPTION_NATIVE_DESCRIBED = 0;
  DESCRIPTION_ADDRESSED = 1;
  DESCRIPTION_ENTITY = 2;
  DESCRIPTION_ENTITY_MANY = 3;
  DESCRIPTION_COMPONENT = 4;
  DESCRIPTION_VAR = 5;
  DESCRIPTION_COMPONENT_VAR = 6;
  DESCRIPTION_ORDERED = 7;
  DESCRIPTION_NONE = 8;
}

enum Layout {
  LAYOUT_VAR = 0;
  LAYOUT_STRING = 1;
  LAYOUT_TYPED = 2;
}

enum Scope {
  SCOPE_GLOBAL = 0;
  SCOPE_LOCAL = 1;
  SCOPE_BROADCASTS = 2;
  SCOPE_EDGES = 3;
  SCOPE_WORKERS = 4;
  SCOPE_TIME = 5;
}

// Expanded Filter message and enum
message Filter {
  oneof kind {
    AllComponents all_components = 1;
    SomeComponents some_components = 2;
    ComponentFilter component = 3;
    NameFilter name = 4;
    IdFilter id = 5;
    VarRangeFilter var_range = 6;
    AttrRangeFilter attr_range = 7;
    DistanceFilter distance = 8;
    DistanceMultiPointFilter distance_multi_point = 9;
    NodeFilter node = 10;
  }
}

message AllComponents { repeated string component_names = 1; }
message SomeComponents { repeated string component_names = 1; }
message ComponentFilter { string component_name = 1; }
message NameFilter { repeated string entity_names = 1; }
message IdFilter { repeated string entity_ids = 1; }
message VarRangeFilter { string local_address = 1; string var_start = 2; string var_end = 3; }
message AttrRangeFilter { string attr_id = 1; string var_start = 2; string var_end = 3; }
message DistanceFilter { string address_x = 1; string address_y = 2; string address_z = 3; double max_x = 4; double max_y = 5; double max_z = 6; }
message DistanceMultiPointFilter { repeated DistanceFilter points = 1; }
message NodeFilter { NodeFilterType type = 1; int32 value = 2; }

enum NodeFilterType {
  NODE_FILTER_LOCAL = 0;
  NODE_FILTER_REMOTE = 1;
}

// Expanded Map message and enum
message Map {
  oneof kind {
    MapAll all = 1;
    SelectAddrs select_addrs = 2;
    ComponentsMap components = 3;
    ComponentMap component = 4;
    VarMap var = 5;
    VarNameMap var_name = 6;
    VarTypeMap var_type = 7;
  }
}

message MapAll {}
message SelectAddrs { repeated string addresses = 1; }
message ComponentsMap { repeated string component_names = 1; }
message ComponentMap { string component_name = 1; }
message VarMap { string var_type = 1; string var_name = 2; }
message VarNameMap { string var_name = 1; }
message VarTypeMap { string var_type = 1; }

// Expanded QueryRequest and QueryResponse
message QueryRequest {
  Query query = 1;
}

message QueryResponse {
  // For now, just a string result. Expand as needed for QueryProduct.
  string result = 1;
}

// Expanded SubscribeRequest and SubscribeResponse
message SubscribeRequest {
  repeated Trigger triggers = 1;
  Query query = 2;
}

message SubscribeResponse {
  oneof message {
    SubscriptionId subscription_id = 1;
    QueryResult query_result = 2;
  }
}

message SubscriptionId {
  string id = 1;
}

message QueryResult {
  string data = 1;
}

// --- Added for compilation ---
message AuthPair {
  string username = 1;
  string password = 2;
}

enum Encoding {
  ENCODING_UNSPECIFIED = 0;
  ENCODING_BINCODE = 1;
  ENCODING_MSGPACK = 2;
  ENCODING_JSON = 3;
}

enum Transport {
  TRANSPORT_UNSPECIFIED = 0;
  TRANSPORT_GRPC = 1;
  TRANSPORT_WS = 2;
  TRANSPORT_TCP = 3;
}